# NASA_Harvest_repo

./: README.md
Harvest_Event_Detec/: pyproject.toml
Harvest_Event_Detec/data/: merged_images_supSpecSmall  points_from_sph.geojson  training_data_overlayed_from_shape_file.geojson
Harvest_Event_Detec/data/HarvestSupervised/: supSpectralBands_1.csv  supSpectralBands_2.csv  supSpectralBands_3.csv  supSpectralBands_4.csv  supSpectralBands_5.csv  supSpectralBands_6.csv  supSpectralBands_7.csv  supSpectralBands_8.csv  validationTrainSet_2022-06-13.csv  validationTrainSet_2022-06-27.csv  validationTrainSet_2022-07-11.csv  validationTrainSet_2022-08-08.csv
Harvest_Event_Detec/data/HarvestSupervised2/: supSpectralBands_1.csv  supSpectralBands_2.csv  supSpectralBands_3.csv  supSpectralBands_4.csv  supSpectralBands_5.csv  supSpectralBands_6.csv  supSpectralBands_7.csv  validationTrainSet_2022-07-25_2022-08-08.csv  validationTrainSet_2022-08-22_2022-09-05.csv  validationTrainSet_2022-09-05_2022-09-19.csv
Harvest_Event_Detec/data/overlayed_3week_images/: img0_overlayed.geojson  (+17 more)
Harvest_Event_Detec/harvest_event_detec/: get_images copy.ipynb  get_images supSpec.ipynb  get_images.ipynb  learning_about_data copy.ipynb  learning_about_data.ipynb  my_best_model.hdf5  nn_model copy.ipynb  nn_model method1.ipynb  nn_model method2.ipynb  nn_model train&test same set.ipynb  nn_model.ipynb  sanbox2.ipynb  sandbox copy.ipynb  sandbox.ipynb  top_feats.csv
Harvest_Event_Detec/scripts/: plots.py  utilities.py  veg_indices.py
Harvest_Event_Detec/tests/: test_harvest_event_detec.py
(+31 files in other folders)
